Update board dimensions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Xiangqi</title>
 	</head>
 	<body>
-		<canvas id="canvas" width="600" height="400"></canvas>
+		<canvas id="canvas"></canvas>
 		<script src="script.js"></script>
 	</body>
 </html>
