--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<input type="checkbox" onclick="lang = (lang == 'en')?'ch':'en'; renderBoard(board, lang);" />
+		<label>Icons</label>
+		
 		<script src="script.js"></script>
 	</body>
 </html>
