Update movement function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
-		<input type="checkbox" onclick="lang = (lang == 'en')?'ch':'en'; renderBoard(board, lang);" />
+		<input type="checkbox" onclick="switchLang();" />
 		<label>Icons</label>
 		
 		<script src="script.js"></script>
