Update index.html for xiangqi.com copyright

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<canvas id="canvas"></canvas>
 		<input type="checkbox" onclick="switchLang();" />
 		<label>Icons</label>
+		<p>Credits: <a href="https://xiangqi.com">Xiangqi.com</a></p>
 		
 		<script src="script.js"></script>
 	</body>
